Elementor: Resolve Misaligned Checkbox Checkmark Placement

--- a/compat/elementor/styles.less
+++ b/compat/elementor/styles.less
@@ -147,7 +147,6 @@
 		}
 
 		.siteorigin-widget-input[type="checkbox"] {
-			display: inline-block;
 			vertical-align: middle;
 		}
 
